<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">iZooto Demo App</string>
    <string name="player_error">Errors initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="appVersion">App Version - 7.5.4</string>
    <string name="description">This app is only for testing the basic features, if any query please contact @iZooto support team</string>
    <string name="share_the_token">Share the Token</string>
    <string name="iz_redirect_string">Notification Redirection Page</string>
    <string name="shareToken"> Share Token</string>
    <string name="yandexAds"> YanDex Ads</string>
    <string name="sDebug">End Debug </string>
    <string name="sInfo">Share Debug info</string>
    <string name="sBDebug">Begin Debug </string>
    <string name="gPermission">Grant Permission </string>
    <string name="izooto_notification_accent_color">0000FF</string>
    <string name="iz_not_found">Not Found</string>
    <string name="more_menu" translatable="false">More</string>
    <string name="privacy_settings" translatable="false">Privacy Settings</string>
    <string name="outbrain_sample_url">http://mobile-demo.outbrain.com/2013/12/15/test-page-2</string>
    <string name="article_txt_1">The Uruguay international says his team-mate was one of the game\'s best players from the minute he made his first team debut.\n\nBarcelona attacker Luis Suarez feels Lionel Messi was born a great player, whereas Real Madrid star Cristiano Ronaldo has had to work to reach his current level.\n\nMessi and Ronaldo are widely regarded as the two best players of their generation, with the pair winning the Ballon d\'Or seven times between them in as many years.\n\nSuarez feels his Barcelona team-mate is the better of the two, though, because of his consistency from the first minute he made his debut.\n
\n"Messi is a natural. It's in his character," the Uruguay international told Le Buteur.
\n\n"Messi is the best player in the world. He was born with his qualities.\n</string>
    <string name="article_txt_2">"Ronaldo has progressed over the course of the years and has worked very hard to reach his current level.
\n\n"He was not at the same level when he first made his debut, though. That\'s why I think Leo is the better of the two."
\n\nSuarez also had his say on Mario Balotelli's difficulties at Liverpool and defended the Italy international against ongoing criticism.
\n\n"I think Balotelli has already played at some huge clubs and has proven to be a formidable player.
\n\n"It is not easy to do what he did at Manchester City.
\n\n"After a spell in Italy, he moved to England, then returned to Italy and eventually move back to England again. That\'s been very difficult for him, but he remains a great player.\n"
    </string>
    <string name="article_txt_3">
    Rakuten, which made San Francisco its North American headquarters in 2015, was aggressive in its bid to land the deal. Mikitani, who is a billionaire, reached out to the team and showed up in person at the first meeting. The Rakuten name is among the most well-known in Japan, but Mikitani said it has little brand recognition in North America, even though its products are used by many consumers.\n\n\"We want to be a household name like Google and Facebook,\" said Mikitani, whose company brought in $7 billion in revenue in 2016. \"Our partnership in Barcelona has helped us in Spain, and the Warriors will certainly be a pillar of getting us there in United States.\"\n\nThe company is no stranger to naming rights in sports. When Japanese baseball was failing, the company started and supported the Tohoku Rakuten Golden Eagles. They won a league title in 2013 with Masahiro Tanaka. Rakuten also owns a pro soccer team in Kobe, Japan.\n
    </string>
    <string name="smart_feed">Show Smart Feed</string>
    <string name="smart_middle_feed">Show Smart Middle Feed</string>
    <string name="grid">Show Grid Feed</string>
    <string name="sf_web_feed">Show WebView RecyclerView Feed</string>
    <string name="sf_web_scroll">Show WebView Scroll Feed</string>
    <string name="sf_video">Show InStream Widget</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pulvinar consectetur scelerisque. Curabitur sodales elit sit amet egestas luctus. In hac habitasse platea dictumst. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In ullamcorper gravida aliquet. Proin congue consectetur tempus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque tristique aliquam luctus. Sed semper et nulla vitae blandit. Mauris suscipit eget nibh at pretium. Nulla et molestie est. Ut sit amet massa elit. Mauris facilisis, arcu ac tempus accumsan, est augue pharetra dui, ac sollicitudin purus elit a ipsum. Pellentesque tincidunt nibh a risus pellentesque lacinia.

        Vestibulum iaculis vitae ipsum vitae ornare. Mauris eget quam enim. Aliquam nisi lorem, condimentum non felis eu, euismod mattis magna. Nullam tristique lacus consectetur mi blandit, ut varius magna eleifend. Phasellus in arcu libero. Fusce a fringilla nisl, at bibendum ligula. Curabitur leo sapien, accumsan in lacinia quis, varius et enim. Fusce magna diam, vehicula eget cursus nec, ullamcorper sed felis. Maecenas placerat ligula ut odio egestas venenatis. Sed ut pretium velit. Proin nibh velit, pharetra vitae lobortis eu, gravida sit amet nunc. Suspendisse ligula libero, bibendum ut elementum at, blandit id magna. Aliquam eget libero eros. Aliquam in urna sed ante tempus vulputate. Aliquam erat volutpat.

        Phasellus eget laoreet leo. Fusce sed mi tortor. Duis id nulla a dolor gravida laoreet et et metus. Quisque condimentum mauris ut mi vulputate tempor quis sed dolor. Integer luctus, urna id cursus luctus, ipsum eros commodo est, id laoreet est erat vel lacus. Etiam vitae ligula non massa vulputate pretium ac sit amet massa. Donec ut nunc at urna consectetur gravida vitae vel velit. Donec convallis diam in ante fermentum rhoncus. Curabitur eu tempus nunc. Etiam venenatis tortor velit, id imperdiet tellus imperdiet vel.

        Morbi tristique volutpat faucibus. Fusce ligula felis, vulputate nec leo eget, pellentesque sagittis metus. Sed iaculis sem et erat bibendum pretium. Duis eu dolor ut ipsum vehicula tincidunt vitae nec nunc. Donec sed mattis nisl, ut auctor justo. Suspendisse id mi quis augue mattis viverra. In in nunc lacus. Cras adipiscing tristique eros, nec pretium risus luctus pharetra. Nunc posuere molestie erat. Maecenas non lacinia massa, accumsan accumsan dolor. Fusce scelerisque ultricies dui luctus feugiat. Aenean bibendum turpis nec dui aliquam accumsan.

        Nulla imperdiet felis vitae lacus fringilla vulputate. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec mollis pharetra nunc, ac auctor justo placerat a. Suspendisse potenti. In semper at est eu varius. Nunc bibendum leo eget lacus mattis semper. Vestibulum dignissim luctus dui, in egestas nibh lobortis eget. Praesent ultricies neque non purus aliquet pulvinar. Aliquam erat volutpat. Integer consequat fermentum rutrum. Sed molestie molestie risus, id sollicitudin velit.
    </string>
    <string name="recommended_to_you">Recommended to you</string>
    <string name="outbrain_source_name">(%1$s)</string>
    <string name="sliding_drawer">Sliding Widget List</string>
    <string name="api_url">https://api.main.example.com</string>
    <string name="close_app">Do you want to close the app?</string>
    <string name="title_1" translatable="false">निर्भया, दिशा और अब अपराजिता... हर जघन्य अपराध के बाद बदला कानून लेकिन रुक नहीं रहे रेप के मामले </string>
    <string name="trackEvents"> Track Events</string>
    <string name="yandex_app_id">13859675</string>
    <string name="banner_ad_unit" tools:ignore="TypographyDashes">R-M-13309303-1</string>
    <string name="interstitial_ad_unit">R-M-13309303-4</string>
    <string name="rewarded_ad_unit">demo-rewarded-yandex</string>
    <string name="native_small_ad_unit">demo-native-app-yandex</string>
    <string name="native_medium_ad_unit">demo-native-video-yandex</string>
    <string name="native_manual_ad_unit">demo-native-content-yandex</string>
    <string name="app_open_ad_unit">demo-appopenad-yandex</string>
    <string name="medium_rectangle_ad_unit">demo-feed-yandex</string>
    <string name="medium_rectangle_ad_unit1">demo-native-bulk-yandex</string>
    <string name="welcome_to_yandex_demo_app">The Yandex Demo App</string>
    <string name="todo">TODO</string>
    <string name="text">Not yet implemented</string>
    <string name="max_banner_ad">Banner</string>
    <string name="max_interstitial_ad">Interstitial</string>
    <string name="max_rewarded_ad">Rewarded</string>
    <string name="medium_native_ad">Medium native</string>
    <string name="small_native_ad">Small native</string>
    <string name="manual_native_ad">Manual native</string>
    <string name="ad_icon">Ad Icon</string>
    <string name="ad_title">Ad Title</string>
    <string name="advertiser">Advertiser</string>
    <string name="ad_description">Ad Description</string>
    <string name="call_to_action">Call to Action</string>
    <string name="mrec">MREC</string>
    <string name="unity_game_id">5784886</string>
    <string name="banner_ad_unit_id">BannerUnitId</string>
    <string name="banner_ad_unit_id_2">banner</string>
    <string name="interstitial_ad_unit_id">Interstitial_Android</string>
    <string name="reward_ad_unit_id">Rewarded_Android</string>
    <string name="banner_ad">Banner Ad</string>
    <string name="interstitial_ad">Interstitial Ad</string>
    <string name="rewarded_ad">Rewarded Ad</string>
    <string name="load_interstitial">Load interstitial</string>
    <string name="load_rewarded">Load rewarded</string>
    <string name="load_top_banner">Load Top Banner</string>
    <string name="load_bottom_banner">Load Bottom Banner</string>
    <string name="hide_top_banner">Hide Top Banner</string>
    <string name="hide_bottom_banner">Hide Bottom Banner</string>
    <string name="aap_lovin_banner_ad_unit">2bb735c91b7c8949</string>
    <string name="appLovin">AppLovin</string>
    <string name="ironsource">IronSource</string>
    <string name="apiKey">20dddc6d5</string>
    <string name="banner_ad_iron">1qnujithpeht0cps</string>
    <string name="interstitial_ad_iron">66ye378lhs42kyhk</string>
    <string name="rewarded_ad_iron">ou0o2ix1kqxb4tef</string>
    <string name="title">Iron Source</string>
    <string name="initializing">Initializing…</string>
    <string name="loading">Loading…</string>
    <string name="show">Show</string>
    <string name="load">Load</string>
    <string name="destroy">Destroy</string>
    <string name="version">app version</string>
    <string name="rewarded_video">Rewarded Video</string>
    <string name="interstitial">Interstitial</string>
    <string name="banner">Banner</string>
    <string name="rewarded_dialog_header">Video Rewarded</string>
    <string name="rewarded_dialog_message">You have been rewarded</string>
    <string name="rvButtonState">rvButtonState</string>
    <string name="isButtonState">isButtonState</string>
    <string name="close">Close</string>
    <string name="banner_placement">Level_Start</string>
    <string name="interstitial_placement">Level_Complete</string>
    <string name="rewarded_placement">Leaderboard</string>
    <string name="native_placement">IAP_Store</string>
    <string name="rewarded">Rewarded</string>
    <string name="native_ad">Native</string>
    <string name="com_ironsource_mediationsdk_ads_nativeadlayout">com.ironsource.mediationsdk.ads.NativeAdLayout</string>
    <string name="inMobi">InMobi</string>
    <string name="inMobiId">a88706c59d424c06a859344b540b5555</string>
</resources>