<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <Button
        android:id="@+id/btn_permissionFIle"
        android:layout_width="match_parent"
        android:textSize="14sp"
        android:textStyle="normal"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:text="@string/gPermission" />
    <Button
        android:id="@+id/btn_beginDebugFile"
        android:layout_width="match_parent"
        android:textSize="14sp"
        android:textStyle="normal"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:text="@string/sBDebug" />
    <Button
        android:id="@+id/btn_sendDebugFile"
        android:layout_width="match_parent"
        android:textSize="14sp"
        android:layout_margin="10dp"
        android:textStyle="normal"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/sInfo" />
    <Button
        android:id="@+id/btn_deleteDebugFile"
        android:layout_width="match_parent"
        android:textSize="14sp"
        android:layout_margin="10dp"
        android:textStyle="normal"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/sDebug"/>
    <Button
        android:id="@+id/btn_news_hub"
        android:layout_width="match_parent"
        android:textSize="14sp"
        android:textStyle="normal"
        android:gravity="center"
        android:visibility="visible"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:text="@string/shareToken" />
    <TextView
        android:id="@+id/btn_appVersion"
        android:layout_width="match_parent"
        android:textSize="14sp"
        android:layout_margin="10dp"
        android:textStyle="normal"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/appVersion" />
    <TextView
        android:layout_width="match_parent"
        android:textSize="14sp"
        android:layout_margin="10dp"
        android:textStyle="normal"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/description" />
</LinearLayout>
